Separate DoughnutChart, fix table data visibility on page reload

--- a/src/app/components/usersDashboard/usersDashboard.module.css
+++ b/src/app/components/usersDashboard/usersDashboard.module.css
@@ -3,21 +3,6 @@
 	width: 100%;
 }
 
-.chart {
-	width: 480px;
-	position: relative;
-  border: 1px solid #e5e5e5;
-  border-radius: 20px;
-}
-
-.chart__center {
-	font-size: 3em;
-  color: #132c49;
-	position: absolute;
-	top: 45%;
-	left: 45%;
-}
-
 .csvBtn {
 	font-size: 1.3em;
 	padding: 0.3em;
